BREAKING: add split calibration, make it a real tool (#2)
* pom: bump to pom-scijava-41.0.0 and simplify pom.xml
* fix: fix cast compile error with modern java compilers

Co-authored-by: takashi310 <ymrnztm310@gmail.com>